--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ python:
 # command to install dependencies
 install: "pip install -r requirements.txt"
 # before script run flake8
-before_script: flake8 .
+# E731 : lambda expression
+before_script: flake8 . --ignore E731
 # command to run tests
 script: py.test
